Changes to filenames
Changes made to filenames to properly reflect my project. Index.html and
app.js updated accordingly to ensure that navigation works

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -27,7 +27,7 @@
     "public": false
   },
   "CoffeeShop": {
-    "dataSource": "mysqlDs",
+    "dataSource": null,
     "public": true
   },
   "Review": {
