--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "loopback-getting-started-intermediate",
+  "name": "dingoes",
   "version": "0.0.0",
   "main": "server/server.js",
   "scripts": {
